<resources>
    <string name="app_name">Instagram</string>

    <string name="log_in">LOG IN</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_activity">HOME ACTIVITY</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="postPhoto">Post Photo</string>
    <string name="refresh">Refresh</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_out">LOG OUT</string>
    <string name="submit">SUBMIT!</string>
    <string name="takePhoto">Take Photo</string>
    <string name="home">Home</string>
    <string name="add_photo">add photo</string>
    <string name="profile">profile</string>
</resources>
