<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/instagram_home_outline_24"
        android:iconTint="@color/black"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_addPhoto"
        android:enabled="true"
        android:icon="@drawable/instagram_new_post_outline_24"
        android:title="@string/add_photo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/instagram_user_outline_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>